# irt

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README.md~  drich-testIRT.py  environ.sh  erich-testIRT.py  irtLinkDef.h  pfrich-testIRT.py  testIRT.py
.github/workflows/: linux-eic-shell.yml
cmake/: IRT2Config.cmake.in  IRTConfig.cmake.in
delphes/: CMakeLists.txt
delphes/database/: dp_p_parameters_22.11.2.txt  dph_parameters_22.11.2.txt  dth_parameters_22.11.2.txt  par_ph.modified.txt  par_ph.txt  par_th.modified.txt  par_th.txt  pfRICH_e_pi_pid.v00a.root  pfRICH_e_pi_pid.v00a.tcl  pfRICH_e_pi_pid.v00b.root  pfRICH_e_pi_pid.v00b.tcl  pfRICH_e_pi_pid.v01a.root  pfRICH_e_pi_pid.v01a.tcl  pfRICH_e_pi_pid.v01b.root  pfRICH_e_pi_pid.v01b.tcl  track-resolution.txt
delphes/include/: DelphesConfig.h  DelphesConfigDIRC.h  DelphesConfigRICH.h  DelphesConfigTOF.h  DrcPidFast.h  delphesLinkDef.h
delphes/scripts/: ETOF.e-pi.t000ps-pf10ps.root  ETOF.e-pi.t000ps-pf10ps.tcl  ETOF.e-pi.t025ps-pf10ps.root  ETOF.e-pi.t025ps-pf10ps.tcl  ETOF.e-pi.t025ps-pf20ps.root  ETOF.e-pi.t025ps-pf20ps.tcl  dconfig-chandra.C  dconfig-jaydeep.C  dconfig.C  delphes-btof.C  delphes-dirc.C  delphes-etof.C  dloop.C  e_pi_pid.root  evaluator.C  pfRICH.example.tcl  pfRICH.root  reader.C
delphes/source/: DelphesConfig.cc  DelphesConfigDIRC.cc  DelphesConfigRICH.cc  DelphesConfigTOF.cc  DrcPidFast.cxx
detectors/: CMakeLists.txt
detectors/compact/: drich.xml  erich.xml  pfrich.xml
detectors/compact/subsystem_views/: drich_only.xml  pfrich_only.xml
detectors/src/: DRICH_geo.cpp  DRich_geo.cpp  ERich_geo.cpp  PFRICH_geo.cpp
erich/: CMakeLists.txt
erich/compact/: erich.xml
erich/compact/subsystem_views/: erich_only.xml
erich/src/: ERich_geo.cpp
evaluation/: CMakeLists.txt
evaluation/include/: evaluationLinkDef.h
evaluation/source/: evaluation.cc  reader.cc
g4interface/include/: CherenkovStackingAction.h  CherenkovSteppingAction.h  G4RadiatorMaterial.h  g4dRIChOptics.hh
g4interface/source/: CherenkovMirror.cc  CherenkovStackingAction.cc  CherenkovSteppingAction.cc  G4RadiatorMaterial.cc
include/: BitMask.h  Calibration.h  ChargedParticle.h  ChargedParticleStep.h  CherenkovDetector.h  CherenkovDetectorCollection.h  CherenkovEvent.h  CherenkovMirror.h  CherenkovPID.h  CherenkovPhotonDetector.h  CherenkovRadiator.h  CherenkovWaveLengthRange.h  Configuration.h  ConicalSurface.h  CylindricalSurface.h  Digitization.h  DigitizedHit.h  FlatSurface.h  G4Object.h  GeantImport.h  IRT.h  IRTSolution.h  OpticalBoundary.h  OpticalPhoton.h  ParametricSurface.h  RadiatorHistory.h  ReconstructionFactory.h  ReflectionPoint.h  RefractionPoint.h  SinglePDF.h  SphericalSurface.h  ToricSurface.h  TransientParticle.h  irtLinkDef.h
reader/: CMakeLists.txt  reader.cc
scripts/: README  drich-hepmc-loop-writer.C  drich-hepmc-pdg-writer.C  drich-hepmc-writer.C  erich-hepmc-pdg-writer.C  erich-hepmc-writer.C  evaluation.C  evaluation.fig12.C  pfrich-hepmc-pdg-writer.C  pfrich-hepmc-writer.C  reader.C  reader_2.C  rejection.C
source/: Calibration.cc  ChargedParticle.cc  CherenkovDetector.cc  CherenkovDetectorCollection.cc  CherenkovRadiator.cc  Configuration.cc  ConicalSurface.cc  CylindricalSurface.cc  Digitization.cc  DigitizedHit.cc  FlatSurface.cc  GeantImport.cc  IRT.cc  ParametricSurface.cc  ReconstructionFactory.cc  SphericalSurface.cc  SphericalSurfaceWithHalfSpace.cc  ToricSurface.cc
